correct spacing between header logo and border line

--- a/blocks/header.css
+++ b/blocks/header.css
@@ -14,6 +14,10 @@
   margin-top: 45px;
 }
 
+.header__logo {
+  margin-bottom: 41px;
+}
+
 @media screen and (max-width: 320px) {
   .header::before {
     width: 320px;
@@ -26,5 +30,6 @@
   .header__logo {
     height: 24px;
     width: 126px;
+    margin-bottom: 32px;
   }
 }
